--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ url: https://seppo0010.github.io/analisis-predicciones-mundial-2022/
 author: seppo0011
 twitter:
   username: seppo0011
-logo: https://seppo0010.github.io/analisis-predicciones-mundial-2022/img.jpg
+  image: https://seppo0010.github.io/analisis-predicciones-mundial-2022/img.jpg
