--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,9 @@ url: https://seppo0010.github.io/analisis-predicciones-mundial-2022/
 author: seppo0011
 twitter:
   username: seppo0011
-image:
-  path: /analisis-predicciones-mundial-2022/img.jpg
-  width: 2048
-  height: 1152
-  alt: Copa del Mundo
+seo_tag:
+  image:
+    path: /analisis-predicciones-mundial-2022/img.jpg
+    width: 2048
+    height: 1152
+    alt: Copa del Mundo
