--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: https://seppo0010.github.io/analisis-predicciones-mundial-2022/
 author: seppo0011
 twitter:
   username: seppo0011
-seo_tag:
+site:
   image:
     path: /analisis-predicciones-mundial-2022/img.jpg
     width: 2048
